[gd_scene load_steps=3 format=2]

[ext_resource path="res://Global/LivingEntity/LivingEntity.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=3]
radius = 16.0

[node name="LivingEntity" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="GetBigger" type="Tween" parent="."]
pause_mode = 2

[connection signal="tween_all_completed" from="GetBigger" to="." method="_on_GetBigger_tween_all_completed"]
